# aws_sv

./: README.md  cmd.cpp
Common/: StatData.h
HttpSv/: CMakeLists.txt  HttpSv.cpp  HttpSv.h  main.cpp
WebSocSv/: BackBtn.qml  CMakeLists.txt  Main.qml  SV_info_page.qml  Start_page.qml  StoreManagement.qml  main.cpp
WebSocSv/Cpp_Module/: Cpp_Module.cpp  Cpp_Module.h  DB_PostgreSQL.cpp  DB_PostgreSQL.h  Hub.cpp  Hub.h  StatModel.cpp  StatModel.h  WK_Soc.cpp  WK_Soc.h
WebSocSv/Qml_Module/: BackGround.qml  PopUp_CreateStore_DB.qml  Popup_Text.qml  RecBtn.qml
WebSocSv/SQLITE/: db_lite.sqlite3  db_lite_2.sqlite3
